assets/css/style.css
/* ============================== Global Styles =============================== */

* {
    margin: 0;
    padding: 0;
}

html, body {
    background: black;
}

/* -- Custom styled scrollbars, discovered in article by Sara Cope, then modified 
        for my project @ https://css-tricks.com/almanac/properties/s/scrollbar/  -- */

body::-webkit-scrollbar {
    width: 0.18rem;
    height: 0.20rem;
}

body::-webkit-scrollbar-track {
    background: rgb(236, 236, 236);
}

body::-webkit-scrollbar-thumb {
    background: rgb(161, 202, 211);
}

html, body {
    scroll-behavior: smooth;
    background: rgb(234, 238, 238);
}

/*-- smooth box-shadow snippet borrowed then tweaked and later adapted for text-shadow, 
        from: Tobias Ahlin at: https://tobiasahlin.com/blog/layered-smooth-box-shadows/ --*/

.navbar {
    box-shadow: 0 2px 1px rgba(88, 88, 90, 0.01), 
                0 4px 2px rgba(88, 88, 90, 0.01), 
                0 8px 4px rgba(88, 88, 90, 0.01),
                0 16px 8px rgba(88, 88, 90, 0.01),  
                0 32px 16px rgba(88, 88, 90, 0.01);
}  

/* ============================== Link Styles =============================== */

a, a:hover, a:focus, a:active {
    text-decoration: none;
    color: rgb(3, 130, 161);
    font-weight: 600;
}

.navbar-custom .navbar-nav .nav-item a {
    color: rgb(160, 158, 158);
    font-size: 1.2rem;
    font-size: 32px;
}

.navbar-custom .navbar-nav .nav-item a:hover { 
    color: pink;
}

/* ============================== Font styles  =============================== */

p {
    font-family: "Nunito sans light", sans-serif;
    font-style: normal;
    font-size: 14px;
    font-size: 1rem;
    line-height: 2.10rem;
    word-spacing: 0.04rem;
    overflow-wrap: break-word;
    color: rgb(11, 11, 11);
}

h1, h2, 
h3, h4, h5{
    font-family: "Acumin-Pro", sans-serif;
    font-weight: 300;
    font-style: normal;
}

.nav-item a, .navbar-toggler,
.nav-close-toggle,
.navbar-custom .navbar-brand {
    font-family: "Acumin-Pro", sans-serif;
    font-weight: 300;
    font-style: normal;
    font-size: 1.3rem;
    color: rgb(43, 43, 43);
    z-index: 1;          
}

.navbar-toggler span {
    display: flex;
    font-size: 1.2rem;
}

.navbar-custom .navbar-brand:hover,
.navbar-toggler:hover {
    color: #4F8EA8;
    transition: all ease-out 50ms;
}

.body-copy {
    display: block;
    margin-top: 160px;
    padding-bottom: 80px;
}

.project-caption {
    display: block;
    text-align: left;
    padding: 4px 0 0 0;
    font-size: 13px;
    font-weight: 300;
}

/* ============================== Navigation Styles =============================== */

.nav-wrapper {
    display: flex;
    position: fixed;
    top: 0;
    left: 0;
    height: auto;
    width: 100vh;
    z-index: 999;
}

.navbar {
    display: flex;
    width: 100vw;
    height: 70px;
    position: fixed;
    flex-direction: column;
    justify-content: center;
    background: rgb(234, 238, 238);
    right: 0;
    top: 0;
}

.navbar-custom .navbar-nav {
    display: flex;
    justify-content: space-between;
    flex-direction: column;
    justify-items: center;
    position: fixed;
    top: 0;
    right: 0;
    background: rgba(234, 238, 238, 0.92);
    width: 100%;
    height: 100%;
    text-align: center;
    padding: 30vh 0 36vh 0; 
    transition: all ease-in 300ms;
    z-index: 3;
}

.navbar-custom .navbar-brand {
    z-index: 2;
    position: fixed;
    left: 6vw;
    top: 14px;
}

.navbar-toggler {
    position: fixed;
    right: 4vw;
    top: 20px;
    font-size: 1.5rem;
    border: none;
    z-index: 4;
}

/* ============================== Photo Styles =============================== */

.gallery-wrapper {
    display: flex;
    position: absolute;
    top: 67px;
    width: 100%;
}

/* .photo-wrap {
    margin-top: 70px;
}

.gallery-frame {
    padding-top: 6vw;
} */

.photo-frame {
    padding-top: 200px;
    display: flex;
} 

.gallery-photo-padding {
    padding-top: 122px;
}

.gallery-end {
    padding-bottom: 120px;
}

img {
    max-width: 100%;
    margin: auto auto;
    display: block;
    border-radius: 2px;
    box-shadow: 0 2px 1px rgba(156, 156, 156, 0.02), 
                0 4px 2px rgba(156, 156, 156, 0.02),
                0 8px 4px rgba(156, 156, 156, 0.01),
                0 16px 8px rgba(156, 156, 156, 0.01);
}

/* ============================== Media Queries =============================== */

@media (min-width: 576px) {
    .navbar-toggler span,
    .navbar-custom .navbar-brand,
    .navbar-custom .navbar-nav .nav-item a {
        font-size: 1.5rem;
        font-size: 26px;
        z-index: 4;
    }
}

@media (min-width: 992px) {

    nav {
        display: flex;
        flex-direction: column;
    }

    .navbar-custom .navbar-nav {
        display: flex;
        flex-direction: row;
        position: fixed;
        top: 0;
        right: 0;
        align-items: center;
        justify-content: flex-end;
        height: 70px;
        margin-right: 24px;
        padding: 0 22px 0 calc(100vw - 22px);
        width: 100vw;
    }

    .nav-item { 
        padding-right: 24px;
    }

    .body-copy {    
        margin-top: 200px;
        padding-bottom: 100px;
    }

    .prints-body {
        display: block;
        position: absolute;
        top: 146px;
        left: 164px;
    }
}

.index-wrapper {
    display: flex;
    position: absolute;
    top: 80px;
    left: 0;
    width: 100vw;
    height: 100vh;
    margin: auto auto;
}

.super-slider {
    display: block;
    flex-direction: column;
    justify-content: center;
    align-self: center;
    position: absolute;
    top: 120px;
    width: calc(100vw - 36px);
    height: 100vw;
}

.slider-wrap {
    display: flex;
    align-content: center;
    justify-content: center;
    position: absolute;
    width: 100vw;
    height: 100vw;
    left: 0;
}

/* =======================================================================
"Super Simple Slider" with keyframes by the brilliant Stephen Scaff at:
https://github.com/stephenscaff/keyframes-slider/blob/master/demo1.html 
However, it only had 3 slides and cycles very quickly so I have doubled
the frames and am trying my hardest to make it longer and smoother  =*/


#thom-index-slide-1 {
    background-image: url('https://thomasmcquillan.github.io/Milestone-One-Project/assets/images/project-pages/suite-nothings/portal.jpg');
}

#thom-index-slide-2 {
    background-image: url('https://thomasmcquillan.github.io/Milestone-One-Project/assets/images/project-pages/suite-nothings/springmuscle.jpg');
}

#thom-index-slide-3 {
    background-image: url('https://thomasmcquillan.github.io/Milestone-One-Project/assets/images/project-pages/suite-nothings/illusions_01.jpg');
}

#thom-index-slide-4 {
    background-image: url('https://thomasmcquillan.github.io/Milestone-One-Project/assets/images/project-pages/suite-nothings/chimney.jpg');
}

#thom-index-slide-5 {
    background-image: url('https://thomasmcquillan.github.io/Milestone-One-Project/assets/images/project-pages/suite-nothings/powder.jpg');
}

#thom-index-slide-6 {
    background-image: url('https://thomasmcquillan.github.io/Milestone-One-Project/assets/images/project-pages/suite-nothings/treelight.jpg');
}

.imgbox {
    display: flex; 
    align-items: center;
    height: 100%;
    width: 100%;
    background-position: center center;
    background-size: cover; 
}

#thom-index-slide-1 {
    position: absolute;
    z-index: 16;
    animation: xfade 15s -0s infinite;
    animation-timing-function: ease-in-out;
}

#thom-index-slide-2 {
    position: absolute;
    z-index: 15;
    animation: xfade 15s -5s infinite;
    animation-timing-function: ease-in-out;
}

#thom-index-slide-3 {
    position: absolute;
    z-index: 14;
    animation: xfade 15s -10s infinite;
    animation-timing-function: ease-in-out;
    }

    #thom-index-slide-4 {
    position: absolute;
    z-index: 13;
    animation: xfade 15s -15s infinite;
    animation-timing-function: ease-in-out;
    }

    #thom-index-slide-5 {
    position: absolute;
    z-index: 12;
    animation: xfade 15s -20s infinite;
    animation-timing-function: ease-in-out;
    }

    #thom-index-slide-6 {
    position: absolute;
    z-index: 11;
    animation: xfade 15s -25s infinite;
    animation-timing-function: ease-in-out;
    }

    @keyframes xfade{

        0% {opacity: 0;}
        20% {opacity: 1;}
        33% {opacity: 1;}
        53% {opacity: 0;}
        100% {opacity: 0;}
    }

/* ===================================================================== */

